--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,8 +27,8 @@
 
   <footer>
     <h3>Contact</h3>
-    <p>Instagram: @callapaintings</p>
-    <p>Email: </p>
+    <p><a href="https://www.instagram.com/callapaintings/"><i class="fab fa-instagram"></i> @callapaintings</a></p>
+    <p><a href="mailto:callamanwaring3@gmail.com"><i class="fa-regular fa-envelope"></i> callamanwaring3@gmail.com</a></p>
   </footer>
 </body>
 </html>
