--- a/store.html
+++ b/store.html
@@ -17,7 +17,7 @@
 
   <main>
     <section class="store">
-      <h2>Available Works</h2>
+      <!-- <h2>Available Works</h2> -->
       <div class="gallery"></div>
     </section>
   </main>
